UC#1 Create LWC

--- a/src/force-app/main/default/classes/AccountOrdersController.cls
+++ b/src/force-app/main/default/classes/AccountOrdersController.cls
@@ -2,18 +2,27 @@ public with sharing class AccountOrdersController {
     
     // Wrapper class for Order SObject
     public class OrderDTO {
+        @AuraEnabled
         public Id orderId;
-        public String orderName;
-        // Add other fields as necessary
+        @AuraEnabled
+        public String orderNumber;
+        @AuraEnabled
+        public Date startDate;
+        @AuraEnabled
+        public String status;
+        @AuraEnabled
+        public Decimal amount;
         
         public OrderDTO(Order o) {
             this.orderId = o.Id;
-            this.orderName = o.Name;
-            // map other fields
+            this.orderNumber = o.OrderNumber;
+            this.startDate = o.EffectiveDate; // Assuming this is the start date
+            this.status = o.Status;
+            this.amount = o.TotalAmount; // This might be a custom field. Adjust accordingly
         }
     }
     
-    @AuraEnabled
+    @AuraEnabled(cacheable=true)
     public static List<OrderDTO> getOrders(Id accountId) {
         try {
             List<Order> orderList = OrderSelector.getOrdersByAccountId(accountId);
@@ -21,6 +30,7 @@ public with sharing class AccountOrdersController {
             for(Order o : orderList) {
                 orderDTOList.add(new OrderDTO(o));
             }
+
             return orderDTOList;
         } catch (Exception e) {
             throw new AuraHandledException(e.getMessage());
