--- a/src/force-app/main/default/classes/OrderSelector.cls
+++ b/src/force-app/main/default/classes/OrderSelector.cls
@@ -1,7 +1,7 @@
 public with sharing class OrderSelector {
     
     public static List<Order> getOrdersByAccountId(Id accountId) {
-        return [SELECT Id, Name
+        return [SELECT Id, OrderNumber, EffectiveDate, Status, TotalAmount 
                 FROM Order 
                 WHERE AccountId = :accountId];
     }
