UC#1 Order Actions

--- a/src/force-app/main/default/classes/AccountOrdersController.cls
+++ b/src/force-app/main/default/classes/AccountOrdersController.cls
@@ -1,4 +1,13 @@
 public with sharing class AccountOrdersController {
+
+    private static final String ORDER_STATUS_DRAFT = 'Draft';
+    private static final String ORDER_STATUS_ACTIVATED = 'Activated';
+    private static final String ORDER_STATUS_SHIPPED = 'Shipped';
+    
+    private static final String ERROR_ORDER_INVALID_OPERATION = 'Invalid Operation for Order #';
+    private static final String STATUS_OK = 'OK';
+    private static final String STATUS_ERROR = 'ERROR';
+
     
     // Wrapper class for Order SObject
     public class OrderDTO {
@@ -12,13 +21,26 @@ public with sharing class AccountOrdersController {
         public String status;
         @AuraEnabled
         public Decimal amount;
+        @AuraEnabled
+        public Id invoiceId;
+        @AuraEnabled
+        public String invoiceName;
+        @AuraEnabled
+        public Id contentDocumentId;
         
-        public OrderDTO(Order o) {
-            this.orderId = o.Id;
-            this.orderNumber = o.OrderNumber;
-            this.startDate = o.EffectiveDate; // Assuming this is the start date
-            this.status = o.Status;
-            this.amount = o.TotalAmount; // This might be a custom field. Adjust accordingly
+        
+        public OrderDTO(Order ord) {
+            this.orderId = ord.Id;
+            this.orderNumber = ord.OrderNumber;
+            this.startDate = ord.EffectiveDate; // Assuming this is the start date
+            this.status = ord.Status;
+            this.amount = ord.TotalAmount; // This might be a custom field. Adjust accordingly
+            
+            if(!ord.AttachedContentDocuments.isEmpty()) {
+                this.invoiceId = ord.AttachedContentDocuments[0].Id;
+                this.invoiceName = ord.AttachedContentDocuments[0].Title;
+                this.contentDocumentId = ord.AttachedContentDocuments[0].ContentDocumentId;
+            }
         }
     }
     
@@ -35,5 +57,45 @@ public with sharing class AccountOrdersController {
         } catch (Exception e) {
             throw new AuraHandledException(e.getMessage());
         }
+    }
+
+    @AuraEnabled
+    public static Map<String, Object> activateOrder(Id orderId) {
+        Map<String, Object> response = new Map<String, Object>();
+        try {
+            Order ord = OrderSelector.getOrderForUpdate(orderId);
+            if(ord.Status != ORDER_STATUS_DRAFT) {
+                response.put('status', STATUS_ERROR);
+                response.put('ErrorMessage', ERROR_ORDER_INVALID_OPERATION + ord.Id);
+                return response;
+            }
+            ord.Status = ORDER_STATUS_ACTIVATED;
+            update ord;
+            response.put('status', STATUS_OK);
+        } catch(Exception e) {
+            response.put('status', STATUS_ERROR);
+            response.put('ErrorMessage', e.getMessage());
+        }
+        return response;
+    }
+    
+    @AuraEnabled
+    public static Map<String, Object> markOrderAsShipped(Id orderId) {
+        Map<String, Object> response = new Map<String, Object>();
+        try {
+            Order ord = OrderSelector.getOrderForUpdate(orderId);
+            if(ord.Status != ORDER_STATUS_ACTIVATED) {
+                response.put('status', STATUS_ERROR);
+                response.put('ErrorMessage', ERROR_ORDER_INVALID_OPERATION + ord.Id);
+                return response;
+            }
+            ord.Status = ORDER_STATUS_SHIPPED;
+            update ord;
+            response.put('status', STATUS_OK);
+        } catch(Exception e) {
+            response.put('status', STATUS_ERROR);
+            response.put('ErrorMessage', e.getMessage());
+        }
+        return response;
     }
 }
