--- a/src/force-app/main/default/classes/OrderSelector.cls
+++ b/src/force-app/main/default/classes/OrderSelector.cls
@@ -1,7 +1,7 @@
 public with sharing class OrderSelector {
     
     public static List<Order> getOrdersByAccountId(Id accountId) {
-        return [SELECT Id, OrderNumber, Status, EffectiveDate, TotalAmount,
+        return [SELECT Id, OrderNumber, Status, EffectiveDate, LastStatusChanged__c, TotalAmount, 
         (SELECT Id, Title, ContentDocumentId FROM AttachedContentDocuments 
          WHERE Title LIKE 'Invoice%' ORDER BY CreatedDate DESC) 
         FROM Order WHERE AccountId = :accountId];
