UC#1 Order actions

--- a/src/force-app/main/default/classes/OrderSelector.cls
+++ b/src/force-app/main/default/classes/OrderSelector.cls
@@ -1,5 +1,18 @@
 public with sharing class OrderSelector {
-    public static List<Order> getOrdersByAccountId(Id accountId) {
-        return [SELECT Id, Name FROM Order WHERE AccountId = :accountId];
+    public static Order getOrderStatusById(Id orderId) {
+        return [
+            SELECT Id, Status 
+            FROM Order 
+            WHERE Id = :orderId LIMIT 1
+        ];
     }
+
+    public static List<Order> getOrdersWithInvoiceInfo(Id accountId) {
+        return [
+            SELECT Id, OrderNumber, Status, EffectiveDate, TotalAmount, 
+            (SELECT Id, Title, ContentDocumentId FROM AttachedContentDocuments WHERE Title LIKE 'Invoice%') 
+            FROM Order WHERE AccountId = :accountId
+        ];
+    }
+    
 }
