--- a/src/force-app/main/default/classes/OrderSelector.cls
+++ b/src/force-app/main/default/classes/OrderSelector.cls
@@ -9,7 +9,7 @@ public with sharing class OrderSelector {
 
     public static List<Order> getOrdersWithInvoiceInfo(Id accountId) {
         return [
-            SELECT Id, OrderNumber, Status, EffectiveDate, TotalAmount, 
+            SELECT Id, OrderNumber, Status, EffectiveDate, TotalAmount,  LastStatusChanged__c, 
             (SELECT Id, Title, ContentDocumentId FROM AttachedContentDocuments WHERE Title LIKE 'Invoice%') 
             FROM Order WHERE AccountId = :accountId
         ];
