--- a/src/force-app/main/default/classes/OrderSelector.cls
+++ b/src/force-app/main/default/classes/OrderSelector.cls
@@ -2,10 +2,10 @@ public with sharing class OrderSelector {
     public static OrderSelector newInstance() {
         return new OrderSelector();
     }
-    
+
     public List<Order> selectOrdersByAccountId(Id accountId) {
         return [
-            SELECT Id, Name, Status, AccountId
+            SELECT Id, OrderNumber, Status, TotalAmount, EffectiveDate
             FROM Order
             WHERE AccountId = :accountId
         ];
