--- a/src/force-app/main/default/classes/OrderSelector.cls
+++ b/src/force-app/main/default/classes/OrderSelector.cls
@@ -1,7 +1,9 @@
 public with sharing class OrderSelector {
 
     public static List<Order> getOrdersWithAttachmentsByAccountId(Id accountId) {
-        return [SELECT Id, EffectiveDate, OrderNumber, Status, TotalAmount 
+        return [SELECT Id, EffectiveDate, OrderNumber, Status, TotalAmount,        
+        (SELECT Id, Title, ContentDocumentId FROM AttachedContentDocuments 
+         WHERE Title LIKE 'Invoice%' ORDER BY CreatedDate DESC) 
         FROM Order WHERE AccountId = :accountId];
     }
 
