--- a/src/force-app/main/default/classes/OrderSelector.cls
+++ b/src/force-app/main/default/classes/OrderSelector.cls
@@ -2,7 +2,7 @@ public with sharing class OrderSelector {
 
     public static List<Order> getOrdersWithAttachmentsByAccountId(Id accountId) {
         return [SELECT Id, EffectiveDate, OrderNumber, Status, TotalAmount,        
-        (SELECT Id, Title, ContentDocumentId FROM AttachedContentDocuments 
+        (SELECT ContentDocumentId FROM AttachedContentDocuments 
          WHERE Title LIKE 'Invoice%' ORDER BY CreatedDate DESC) 
         FROM Order WHERE AccountId = :accountId];
     }
