UC#1 Order actions

--- a/src/force-app/main/default/classes/AccountOrdersController.cls
+++ b/src/force-app/main/default/classes/AccountOrdersController.cls
@@ -1,4 +1,77 @@
 public with sharing class AccountOrdersController {
+    private static final String ORDER_ACTIVE_STATUS = 'Active';
+    private static final String ORDER_SHIPPED_STATUS = 'Shipped';
+
+
+
+    @AuraEnabled(cacheable=true)
+    public static List<OrderDTO> getOrders(Id accountId) {
+        OrderSelector orderSelector = OrderSelector.newInstance();
+
+        List<Order> orders = orderSelector.selectOrdersByAccountId(accountId);
+        List<OrderDTO> orderDTOs = new List<OrderDTO>();
+        
+        for(Order ord : orders) {
+            orderDTOs.add(new OrderDTO(ord));
+        }
+
+        return orderDTOs;
+    }
+
+    @AuraEnabled
+    public static Map<String, String> activateOrder(Id orderId) {
+        Map<String, String> response = new Map<String, String>();
+
+        try {
+            OrderSelector selector = OrderSelector.newInstance(); 
+            List<Order> ordersToActivate = selector.selectDraftOrderById(orderId);
+            
+            if (ordersToActivate.isEmpty()) {
+                response.put('status', 'ERROR');
+                response.put('ErrorMessage', 'Invalid operation for Order#' + orderId);
+                return response;
+            }
+
+            Order orderToActivate = ordersToActivate[0];
+            orderToActivate.Status = ORDER_ACTIVE_STATUS;
+            update orderToActivate;
+
+            response.put('status', 'OK');
+            response.put('ErrorMessage', null);
+        } catch (Exception e) {
+            response.put('status', 'ERROR');
+            response.put('ErrorMessage', 'An error occured: ' + e.getMessage());
+        }
+        return response;
+    }
+
+    @AuraEnabled
+    public static Map<String, String> markOrderAsShipped(Id orderId) {
+        Map<String, String> response = new Map<String, String>();
+
+        try {
+            OrderSelector selector = OrderSelector.newInstance(); 
+            List<Order> ordersToMarkShipped = selector.selectActiveOrderById(orderId);
+            
+            if (ordersToMarkShipped.isEmpty()) {
+                response.put('status', 'ERROR');
+                response.put('ErrorMessage', 'Invalid operation for Order#' + orderId);
+                return response;
+            }
+
+            Order orderToMarkShipped = ordersToMarkShipped[0];
+            orderToMarkShipped.Status = ORDER_SHIPPED_STATUS;
+            update orderToMarkShipped;
+
+            response.put('status', 'OK');
+            response.put('ErrorMessage', null);
+        } catch (Exception e) {
+            response.put('status', 'ERROR');
+            response.put('ErrorMessage', 'An error occured: ' + e.getMessage());
+        }
+        return response;
+    }
+
     public class OrderDTO {
         @AuraEnabled
         public Id Id { get; set; }
@@ -10,6 +83,8 @@ public with sharing class AccountOrdersController {
         public Decimal TotalAmount { get; set; }
         @AuraEnabled
         public Date EffectiveDate { get; set; }
+        @AuraEnabled
+        public Id ContentDocumentId { get; set;}
 
         public OrderDTO(Order ord) {
             this.Id = ord.Id;
@@ -17,20 +92,10 @@ public with sharing class AccountOrdersController {
             this.Status = ord.Status;
             this.TotalAmount = ord.TotalAmount;
             this.EffectiveDate = ord.EffectiveDate;
+            if (ord.AttachedContentDocuments != null && !ord.AttachedContentDocuments.isEmpty()) {
+                List<AttachedContentDocument> subq = (List<AttachedContentDocument>) ord.AttachedContentDocuments;
+                this.ContentDocumentId = subq[0].ContentDocumentId;
+            }
         }
-    }
-
-    @AuraEnabled(cacheable=true)
-    public static List<OrderDTO> getOrders(Id accountId) {
-        OrderSelector orderSelector = OrderSelector.newInstance();
-
-        List<Order> orders = orderSelector.selectOrdersByAccountId(accountId);
-        
-        List<OrderDTO> orderDTOs = new List<OrderDTO>();
-        for(Order ord : orders) {
-            orderDTOs.add(new OrderDTO(ord));
-        }
-        
-        return orderDTOs;
     }
 }
