--- a/src/force-app/main/default/classes/Constants.cls
+++ b/src/force-app/main/default/classes/Constants.cls
@@ -7,7 +7,9 @@ public class Constants {
     public static String ORDER_DML_RESPONSE_STATUS_SUCCESS = 'Success';
     public static String ORDER_DML_RESPONSE_STATUS_ERROR = 'Error';
     public static String ORDER_DML_RESPONSE_ERROR_MESSAGE = 'Invalid Operation for Order #';
+    public static String ORDER_DML_RESPONSE_BULK_ERROR_MESSAGE = 'Invalid Operation for Orders: {0}';
     public static String ORDER_DML_RESPONSE_SUCCESS_MESSAGE = 'Successfully set Status {0} for Order #{1}';
+    public static String ORDER_DML_RESPONSE_BULK_SUCCESS_MESSAGE = 'Successfully set Status {0} for selected Orders';
 
     public static String INVALID_ORDER_ID_MESSAGE = 'Invalid order Id';
     public static String INVALID_ACCOUNT_ID_MESSAGE = 'Invalid account Id';
