--- a/src/force-app/main/default/classes/OrderSelector.cls
+++ b/src/force-app/main/default/classes/OrderSelector.cls
@@ -1,6 +1,7 @@
 /**
  * @description OrderSelector: Apex Class used to access "Order" SObject records.
  * @note: Uses inherited sharing to enforce the sharing rules of the class that calls it.
+ * //TODO: Cover with Apex Tests.
  */
 public inherited sharing class OrderSelector {
 
